--- a/index.html
+++ b/index.html
@@ -13,3 +13,26 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+
+</body>
+</html>
+<h1>Jagruti Bhole Portfolio</h1>    
+<h2>I'm a  web Developer</h2>
+<hr/>
+<a href="./public/movie-ranking.html"><h3>Movie Ranking Poject </h3></a>
+ <img src="./assets/images/movie-ranking.png " height="200" >
+<br/>
+<a href="./public/birthday-invite.html"><h3>Birthday Invite Project </h3></a>
+ <img src="./assets/images/birthday-invite.png" height="200" >
+<br/>
+<h4><a href="./public/contact.html">Contact Us</a>
+<a href="./public/about.html">About Us</a>
+</h4>
